assets/css/style.css
/* ... */
/* <<< end social media links */

/* copy right */
.copy {
  font-size: 1rem;
  margin-bottom: 0;
  padding-bottom: 1rem;
}

/* <<< end footer */

/* >>> start more_info page */
.include-all {
  margin: auto;
  width: fit-content;
  text-align: left;
}

.new-bullet {
  list-style: url(../images/icons/thumbs-up-icon-24.png);
}

.pack-image img {
  width: 95%;
  margin: auto;
  border-radius: 2rem;
}

table {
  width: 95%;
  margin: 2.5%;
  margin-bottom: 1rem;
  border-collapse: collapse;
}

tr,
th,
td {
  font-size: 1.2rem;
  padding: 0.5rem;
}

th {
  padding: 0 1rem;
}

td {
  text-align: left;
  padding: 1rem;
  border-left: dashed var(--color-button-selected) 1px;
}

.table-border {
  border-top: dashed var(--color-button-selected) 1px;
  border-bottom: dashed var(--color-button-selected) 1px;
}

.price {
  color: var(--color-headings);
  font-weight: bold;
  font-size: 1.5rem;
  height: 3rem;
}

.flash {
  -webkit-animation-name: flash;
  -webkit-animation-duration: 1s;
  animation-name: flash;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  margin: 2rem auto 1rem auto;
}

@-webkit-keyframes flash {
  from {
    font-size: 1.5rem;
    opacity: .6
  }

  to {
    font-size: 1.6rem;
    opacity: 1
  }
}

@keyframes flash {
  from {
    font-size: 1.5rem;
    opacity: .6
  }

  to {
    font-size: 1.6rem;
    opacity: 1
  }
}

/* <<< end more_info page */

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* at 600px == font size standard 16px == 37.5em */
@media screen and (min-width: 37.5em) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 4rem;
  }

  h3 {
    font-size: 3.5rem;
  }

  summary h2 {
    font-size: 4rem;
  }

  summary h3 {
    font-size: 3.5rem;
  }

  .header__intro {
    font-size: 2rem;
  }

  /* hide element when screen expanse */
  .hide-desktop {
    display: none;
  }

  /* shows element when screen expanse */
  .button--show-desktop {
    display: inline-block;
    height: 3.44rem;
    margin: 0 5px;
    font-size: 1.6rem;
  }

  /* changes nav bar elements to inline-block, they are not inside the hamburger any more */
  .nav-bar__hamburger {
    /* is needed otherwise elements do not appear */
    display: inline-block;
    /* is needed otherwise background dose not float behind navbar */
    float: left;
    position: static;
    top: 5rem;
    overflow: auto;
    z-index: 1;
    list-style: none;
    box-shadow: none;
    background-color: transparent;
    width: 100%;
    margin-top: 1.5rem;
    height: auto;
  }

  .nav-bar__hamburger li {
    display: inline-block;
    margin: 0.5rem;
  }

  .nav-bar__hamburger li:first-child {
    display: inline-block;
    margin-left: 0rem;
  }

  .nav-bar__hamburger .button {
    width: auto;
    font-size: 1.3rem;
    /* margin: auto; */
  }

  .float-left {
    float: left;
    margin-left: 1rem;
  }

  /* aligns the subscribe labe, input and button */
  .align-subscribe {
    flex-direction: row;
    justify-content: center;
  }

  /* spaces cards horizontal even */
  .product-card {
    display: flex;
    justify-content: space-evenly;
    width: 96%;
    margin-left: 2%;
  }

  /* spaces card elements vertical even */
  .section--card {
    width: 32%;
    margin: 1rem 1%;
    display: inline-block;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  /* increase height of the heading when text becomes bigger */
  .product-card__heading {
    height: 6rem;
    font-size: 2rem;
  }

  /* testimony, group user image with name, occupation tighter together */
  .user-header {
    width: 40%;
    margin-left: 30%;
  }

  .user-name {
    font-size: 2.2rem;
    margin-top: 0;
  }

  .user-job {
    font-size: 2rem;
  }

  .user-quote {
    font-size: 2.4rem;
    height: 32rem;
  }

  /* groups the profile picture and the text together */
  .profile-text {
    width: 70%;
    margin-left: 15%;
  }

  /* >>> start faq */
  .answer-faq {
    size: 2.4rem;
  }

  /* >>> start contact us */
  .contact-heading {
    font-size: 3rem;
  }

  /* styles list items for contact */
  .contact-text {
    font-size: 2rem;
  }

  .copy {
    font-size: 1.5rem;
  }

  tr,
  th,
  td {
    font-size: 2rem;
    padding: 0 2rem;
  }

  @-webkit-keyframes flash {
    from {
      font-size: 2.5rem;
      opacity: .6
    }

    to {
      font-size: 2.6rem;
      opacity: 1
    }
  }

  @keyframes flash {
    from {
      font-size: 2.5rem;
      opacity: .6
    }

    to {
      font-size: 2.6rem;
      opacity: 1
    }
  }
}

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* breakpoint for desktop 3 column at 720px == font size standard 16px == 45em */
@media screen and (min-width: 45em) {

  .nav-bar__hamburger {
    width: 90%;
    margin-left: 5%;
  }

  .nav-bar__hamburger .button {
    font-size: 1.6rem;
  }

  .product-card__heading {
    height: 10rem;
    font-size: 3rem;
  }
}

/* media queries do not take font size from the html element,
16px == 1em and not 62.5% == 10px == 1em */
/* at 1020px == font size standard 16px == 63.75em */
@media screen and (min-width: 63.75em) {
  h1 {
    font-size: 8rem;
  }

  h2 {
    letter-spacing: 1rem;
  }

  .user-quote {
    height: 20rem;
  }

  /* changes table size on wider screens */
  table {
    width: 80%;
    margin-left: 10%;
  }

  th {
    font-size: 3rem;
  }

  /* increase height of the heading when text becomes bigger */
  .product-card__heading {
    height: 7rem;
    font-size: 3.5rem;
  }

  /* groups the profile picture and the text together */
  .profile-text {
    width: 60%;
    margin-left: 20%;
  }
}

